# FE-Monster

./: .gitignore  COMMUNITY_CLOSED_MODULE_SECURITY.md  COMMUNITY_LICENSE_BOUNDARY.md  COMMUNITY_SECURITY_HARDENING.md  COMMUNITY_SERVER_WORKLOG.md  FE Monster.vbs  FE_MONSTER_使用说明书.md  LICENSE  NETEASE_LOGIN_PERSISTENCE.md  OPTIMIZATION_REPORT_2026-07-12.md  PRODUCT.md  PROJECT_STATUS.md  README.md  RENDERING_POLICY.md  UPDATE.md  build.cmd  clean.cmd  jsrepo.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  run.cmd  使用说明.md  功能介绍.md  更新日志.md
.github/: CODEOWNERS
LICENSES/: COMMUNITY-PROPRIETARY.txt
android/: README.md  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/androidWeb/: fe-monster-mobile-runtime.js  fe-monster-mobile.css
android/app/src/main/cpp/: fe-node-mobile.cpp
android/app/src/main/java/com/femonster/mobile/: MainActivity.java
android/app/src/main/nodeGateway/: main.cjs  package-lock.json  package.json
android/app/src/main/nodeGateway/providers/: qishui.cjs
android/app/src/main/res/drawable/: deep_black_gold_button.xml  deep_black_gold_field.xml  ic_launcher.xml
android/app/src/main/res/raw/: sakura_frp_681748273.crt
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: network_security_config.xml
components/: BlurText.runtime.js  BorderGlow.runtime.js  GlassSurface.css  GlassSurface.jsx  README.md
scripts/: apply-client-update.ps1  build-android.ps1  build-installer.ps1  build-native-client.ps1  (+74 more)
web/: app.js  (+22 more)
(+58 files in other folders)
